2002-08-06  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h:
	* src/bytecode.cpp: Formatting.
	(EndMethod): Fix assertion with oversize method body.
	* src/decl.cpp (GetStaticInitializerMethod),
	(ProcessInstanceInitializers): Assign return type to generated
	methods to avoid coredump with oversize initializer body.

2002-08-05  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.cpp (AstClassBody::Clone): Correctly clone.
	* src/bytecode.h (last_parameter_index):
	* src/expr.cpp (ProcessCastExpression):
	* src/semantic.h:
	* src/symbol.h (initializer_constructors):
	* src/symbol.cpp:
	* src/ast.h (CHECK_AND_CAST): Delete dead code.
	(AstMethodBody, AstSwitchBlock):
	* src/parser.cpp (Initializer):
	* src/unparse.cpp: Fix unparsing bugs, related to switch blocks
	and instance initializers.
	* src/error.cpp:
	* src/bytecode.cpp: Add more JVMS violation tests, for array
	dimensions and method parameter count.
	(EmitCastExpression): Improve to handle all casts within a single
	method.
	* src/segment.h:
	* src/segment.cpp: Fix constant pool overflow - bug 222.

2002-08-02  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h (EmitCheckForNull):
	* src/bytecode.cpp (EmitCheckForNull, EmitSuperInvocation),
	(LoadVariable, EmitInstanceCreationExpression): Fix two corner
	cases of null checks - bugs 2991, 3170.

2002-08-02  Eric Blake  <ebb9@email.byu.edu>

	Overhaul line ending and error message output. Solves bug 2879,
	and makes errors more unified in appearance.
	* src/gencode.java (IsNewline): Redefine.
	(IsWhitespace): New category, necessary for @deprecated - bug 519.
	* src/code.cpp:
	* src/code.h: Regenerate.
	* src/control.cpp (ProcessBodies): Do not output .class file after
	parse error, even if we were able to recover.
	* src/diagnose.h (ParseErrorInfo):
	* src/diagnose.cpp:
	* src/error.h (ErrorInfo):
	* src/error.cpp:
	* src/stream.h (StreamError):
	* src/stream.cpp: Unify, using new features of LexStream.
	* src/option.cpp:
	* src/parser.cpp:
	* src/unparse.cpp: